--- a/inicio.html
+++ b/inicio.html
@@ -11,8 +11,8 @@
     }
 
     #cor {
-      color: lime;
-      background-color: blueviolet;
+      color: rgb(255, 0, 221);
+      background-color: rgb(0, 238, 255);
       opacity: 0.5;
       width: 30%;
     }
@@ -21,8 +21,8 @@
 
 <body>
   <div id="cor">
-    <h1>Bem vindo</h1>
-    <h2> Você está em um jogo de rpg em uma fase bem emocionante. Há tres portas enumeradas, qual você escolhe?</h2>
+    <h1>Salve Salve </h1>
+    <h2> Você está de frente com a escolha do seculo qual porta voce escolhe ?</h2>
 
     <form>
       <input type="text" id="valordigitado" name="fname"><br>
