--- a/sonho.html
+++ b/sonho.html
@@ -5,7 +5,7 @@
   <style>
     body {
       background-attachment: fixed;
-      background-image: url("dream.jpeg");
+      background-image: url("éocalvo");
       background-repeat: no-repeat;
       background-size: 100% 100%;
     }
