--- a/inicio.html
+++ b/inicio.html
@@ -22,7 +22,7 @@
 <body>
   <div id="cor">
     <h1>Bem vindo</h1>
-    <h2> Você está em um jogo de rpg em uma fase bem emocionante. Há tres portas enumeradas, qual você escolhe?</h2>
+    <h2> Você está em um jogo de rpg em uma fase bem emocionante. Há tres portas enumeradas, qual você escolhe??</h2>
 
     <form>
       <input type="text" id="valordigitado" name="fname"><br>
