--- a/inicio.html
+++ b/inicio.html
@@ -22,8 +22,8 @@
 <body>
   <div id="cor">
 
-    <h1>Salve Salve </h1>
-    <h2> Você está de frente com a escolha do seculo qual porta voce escolhe ?</h2>
+    <h1>  Seja Bem vindos. </h1>
+    <h2> Você está em frente com a melhor escolha do Universo! qual porta você irá escolher?</h2>
 
     <form>
       <input type="text" id="valordigitado" name="fname"><br>
@@ -31,7 +31,7 @@
 
     <input type="button" onclick="mostrarValor()" value="Click Me!">
 
-    <p id="demo">estou esperando...</p>
+    <p id="demo">Aguardando...</p>
   </div>
   <script>
     function mostrarValor() {
