--- a/porta1.html
+++ b/porta1.html
@@ -11,7 +11,7 @@
     }
 
     #cor {
-      color: lime;
+      color: rgb(251, 255, 0);
       background-color: blueviolet;
       opacity: 0.5;
       width: 30%;
@@ -21,8 +21,8 @@
 
 <body>
   <div id="cor">
-    <h1>você morreu</h1>
-    <h2> quer começar denovo? (s/n)</h2>
+    <h1>Você acabou falecendo</h1>
+    <h2> quer tentar novamente? (s/n)</h2>
 
     <form>
       <input type="text" id="valordigitado" name="fname"><br>
@@ -30,7 +30,7 @@
 
     <input type="button" onclick="mostrarValor()" value="Click Me!">
 
-    <p id="demo">estou esperando...</p>
+    <p id="demo">Estou Aguardando...</p>
   </div>
   <script>
     function mostrarValor() {
