--- a/porta2.html
+++ b/porta2.html
@@ -11,8 +11,8 @@
     }
 
     #cor {
-      color: lime;
-      background-color: blueviolet;
+      color: rgb(255, 123, 0);
+      background-color: rgb(66, 4, 4);
       opacity: 0.5;
       width: 30%;
     }
@@ -21,8 +21,8 @@
 
 <body>
   <div id="cor">
-    <h1>Você escolhe ir para a praia ou para a cidade?</h1>
-    <h2> digite "praia", "cidade", ou "voltar"</h2>
+    <h1>Você quer ir á área urbana ou área rural ?</h1>
+    <h2> digite "Urbana", "Rural", ou "Ínicio"</h2>
 
     <form>
       <input type="text" id="valordigitado" name="fname"><br>
@@ -30,7 +30,7 @@
 
     <input type="button" onclick="mostrarValor()" value="Click Me!">
 
-    <p id="demo">estou esperando...</p>
+    <p id="demo">Estou aguardando...</p>
   </div>
   <script>
     function mostrarValor() {
