--- a/porta3.html
+++ b/porta3.html
@@ -11,8 +11,8 @@
     }
 
     #cor {
-      color: lime;
-      background-color: blueviolet;
+      color: rgb(255, 0, 0);
+      background-color: rgb(43, 226, 113);
       opacity: 0.5;
       width: 30%;
     }
@@ -22,7 +22,7 @@
 <body>
   <div id="cor">
     <h1>Parabéns, você chegou ao fim!</h1>
-    <h2> Quer jogar denovo?</h2>
+    <h2> Quer jogar novamente?</h2>
 
     <form>
       <input type="text" id="valordigitado" name="fname"><br>
