--- a/praia.html
+++ b/praia.html
@@ -5,7 +5,7 @@
   <style>
     body {
       background-attachment: fixed;
-      background-image: url("city.jpg");
+      background-image: url("praia.jpg");
       background-repeat: no-repeat;
       background-size: 100% 100%;
     }
